roles/servers/files/10.32.100.8/iptables
# Firewall configuration written by system-config-firewall
# Manual customization of this file is not recommended.
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:LOGGING - [0:0]

###################################### INPUT RULES ############################################
#
########################################### Mandatory ##########################################    
### Allow from loopback
-A INPUT -i lo -j ACCEPT
#
### Allow input that the output has been established
-A INPUT -m state --state NEW,ESTABLISHED,RELATED -j ACCEPT
#
### Allow ICMP packets
-A INPUT -p icmp --icmp-type 11 -j ACCEPT
################################################################################################
#
### Allow SSH Access from Admin VLAN and Monitoring Server
-A INPUT -s 10.32.5.0/255.255.255.0 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.16.179 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.16.180 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
#
### Allow SNMP from Monitoring Server
-A INPUT -s 10.32.16.179 -p udp -m udp --dport 161 -m state --state NEW,ESTABLISHED -j ACCEPT
#
### Allow Monit Access from Admin VLAN
-A INPUT -s 10.32.5.0/255.255.255.0 -p tcp -m tcp --dport 2812 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow mysql access from QA/QC
-A INPUT -p tcp -m tcp -s 10.32.6.13 --dport 3306 -j ACCEPT
#
### Log the rest
-A INPUT -j LOGGING
-A LOGGING -m limit --limit 5/min -j LOG --log-prefix "Incoming Dropped: " --log-level 5
-A LOGGING -j DROP
#
############ALLOW INPUT FOR MARIA DB/ MYSQL
-A INPUT -p tcp -m tcp -d 10.32.10.7 --dport 3306 -j ACCEPT
-A INPUT -p tcp -m tcp -s 10.32.16.179 --dport 3306 -j ACCEPT

### Allow Input From Kediri
-A INPUT -s 10.32.100.19 -j ACCEPT
-A INPUT -s 10.32.100.17 -j ACCEPT


####################################### OUTPUT RULES ############################################
#
########################################### Mandatory ###########################################    
### Allow output from loopback
-A OUTPUT -o lo -j ACCEPT 
#
### Allow output that the input has been established
-A OUTPUT -o eth0 -p tcp -m state --state ESTABLISHED -j ACCEPT 
-A OUTPUT -o eth0 -p udp -m state --state ESTABLISHED -j ACCEPT 
#
### Allow ping outside
-A OUTPUT -p icmp -j ACCEPT
################################################################################################
#
### Allow output to service hosts for service domain(tcp/53), ntp(tcp/123), http(tcp/80), and https(tcp/443)
-A OUTPUT -d 10.32.10.53 -p udp -m multiport --dports 53,123 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.15.190 -p tcp -m multiport --dports 80,443 -m state --state NEW,ESTABLISHED -j ACCEPT
#-A OUTPUT -d 10.32.15.88 -p tcp -m tcp --dport 22 -j ACCEPT

### Allow logging to arun
-A OUTPUT -d 10.32.100.18 -p tcp -m tcp --dport 11 -j ACCEPT

### Allow output to syslog-ng server
-A OUTPUT -o eth1 -d 10.32.100.18 -p tcp --dport 11 -m state --state NEW -j ACCEPT

### Allow Output to Kediri
-A OUTPUT -d 10.32.100.19 -j ACCEPT
-A OUTPUT -d 10.32.100.17 -j ACCEPT

## Allow smtp access to mail server
-A OUTPUT -d 10.32.16.179 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT


### Loggin the rest
-A OUTPUT -j LOGGING
-A LOGGING -m limit --limit 5/min -j LOG --log-prefix "Outgoing Dropped: " --log-level 5
-A LOGGING -j DROP
#
### Must commit
COMMIT



#======================================
#*filter
#:INPUT ACCEPT [0:0]
#:FORWARD ACCEPT [0:0]
#:OUTPUT ACCEPT [0:0]
#-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
#-A INPUT -p icmp -j ACCEPT
#-A INPUT -i lo -j ACCEPT
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
#-A INPUT -j REJECT --reject-with icmp-host-prohibited
#-A FORWARD -j REJECT --reject-with icmp-host-prohibited
##COMMIT
